--- a/index.html
+++ b/index.html
@@ -716,6 +716,10 @@ margin-bottom: 20px;
                     <li data-group="BlockSeat" data-name="seatBlockSeatIdPut" class="">
                       <a href="#api-BlockSeat-seatBlockSeatIdPut">seatBlockSeatIdPut</a>
                     </li>
+                  <li class="nav-header" data-group="BookedSeats"><a href="#api-BookedSeats">API Methods - BookedSeats</a></li>
+                    <li data-group="BookedSeats" data-name="seatsbookedDateGet" class="">
+                      <a href="#api-BookedSeats-seatsbookedDateGet">seatsbookedDateGet</a>
+                    </li>
                   <li class="nav-header" data-group="BookingDelete"><a href="#api-BookingDelete">API Methods - BookingDelete</a></li>
                     <li data-group="BookingDelete" data-name="deleteBooking" class="">
                       <a href="#api-BookingDelete-deleteBooking">deleteBooking</a>
@@ -1015,6 +1019,329 @@ except ApiException as e:
                             </div>
 
                             <h3> Status: 405 - Input invalid </h3>
+
+                            <ul class="nav nav-tabs nav-tabs-examples" >
+                            </ul>
+
+                            <div class="tab-content" style='margin-bottom: 10px;'>
+                            </div>
+
+                        </article>
+                      </div>
+                      <hr>
+                  </section>
+                <section id="api-BookedSeats">
+                  <h1>BookedSeats</h1>
+                    <div id="api-BookedSeats-seatsbookedDateGet">
+                      <article id="api-BookedSeats-seatsbookedDateGet-0" data-group="User" data-name="seatsbookedDateGet" data-version="0">
+                        <div class="pull-left">
+                          <h1>seatsbookedDateGet</h1>
+                          <p>shows booked seats at a particular date.</p>
+                        </div>
+                        <div class="pull-right"></div>
+                        <div class="clearfix"></div>
+                        <p></p>
+                        <p class="marked"></p>
+                        <p></p>
+                        <br />
+                        <pre class="prettyprint language-html prettyprinted" data-type="get"><code><span class="pln">/seatsbooked/{date}</span></code></pre>
+                        <p>
+                          <h3>Usage and SDK Samples</h3>
+                        </p>
+                        <ul class="nav nav-tabs nav-tabs-examples">
+                          <li class="active"><a href="#examples-BookedSeats-seatsbookedDateGet-0-curl">Curl</a></li>
+                          <li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-java">Java</a></li>
+                          <li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-android">Android</a></li>
+                          <!--<li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-groovy">Groovy</a></li>-->
+                          <li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-objc">Obj-C</a></li>
+                          <li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-javascript">JavaScript</a></li>
+                          <!--<li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-angular">Angular</a></li>-->
+                          <li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-csharp">C#</a></li>
+                          <li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-php">PHP</a></li>
+                          <li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-perl">Perl</a></li>
+                          <li class=""><a href="#examples-BookedSeats-seatsbookedDateGet-0-python">Python</a></li>
+                        </ul>
+
+                        <div class="tab-content">
+                          <div class="tab-pane active" id="examples-BookedSeats-seatsbookedDateGet-0-curl">
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://exp1spring.herokuapp.com/desking/seatsbooked/{date}"</code></pre>
+                          </div>
+                          <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-java">
+                            <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
+import io.swagger.client.auth.*;
+import io.swagger.client.model.*;
+import io.swagger.client.api.BookedSeatsApi;
+
+import java.io.File;
+import java.util.*;
+
+public class BookedSeatsApiExample {
+
+    public static void main(String[] args) {
+        
+        BookedSeatsApi apiInstance = new BookedSeatsApi();
+        String date = date_example; // String | Date
+        try {
+            array[Object] result = apiInstance.seatsbookedDateGet(date);
+            System.out.println(result);
+        } catch (ApiException e) {
+            System.err.println("Exception when calling BookedSeatsApi#seatsbookedDateGet");
+            e.printStackTrace();
+        }
+    }
+}</code></pre>
+                          </div>
+
+                          <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-android">
+                            <pre class="prettyprint"><code class="language-java">import io.swagger.client.api.BookedSeatsApi;
+
+public class BookedSeatsApiExample {
+
+    public static void main(String[] args) {
+        BookedSeatsApi apiInstance = new BookedSeatsApi();
+        String date = date_example; // String | Date
+        try {
+            array[Object] result = apiInstance.seatsbookedDateGet(date);
+            System.out.println(result);
+        } catch (ApiException e) {
+            System.err.println("Exception when calling BookedSeatsApi#seatsbookedDateGet");
+            e.printStackTrace();
+        }
+    }
+}</code></pre>
+                          </div>
+  <!--
+  <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-groovy">
+  <pre class="prettyprint language-json prettyprinted" data-type="json"><code>Coming Soon!</code></pre>
+  </div> -->
+                            <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-objc">
+                              <pre class="prettyprint"><code class="language-cpp">String *date = date_example; // Date
+
+BookedSeatsApi *apiInstance = [[BookedSeatsApi alloc] init];
+
+// shows booked seats at a particular date.
+[apiInstance seatsbookedDateGetWith:date
+              completionHandler: ^(array[Object] output, NSError* error) {
+                            if (output) {
+                                NSLog(@"%@", output);
+                            }
+                            if (error) {
+                                NSLog(@"Error: %@", error);
+                            }
+                        }];
+</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-javascript">
+                              <pre class="prettyprint"><code class="language-js">var DeskingApplicationApi = require('desking_application_api');
+
+var api = new DeskingApplicationApi.BookedSeatsApi()
+
+var date = date_example; // {String} Date
+
+
+var callback = function(error, data, response) {
+  if (error) {
+    console.error(error);
+  } else {
+    console.log('API called successfully. Returned data: ' + data);
+  }
+};
+api.seatsbookedDateGet(date, callback);
+</code></pre>
+                            </div>
+
+                            <!--<div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-angular">
+              <pre class="prettyprint language-json prettyprinted" data-type="json"><code>Coming Soon!</code></pre>
+            </div>-->
+                            <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-csharp">
+                              <pre class="prettyprint"><code class="language-cs">using System;
+using System.Diagnostics;
+using IO.Swagger.Api;
+using IO.Swagger.Client;
+using IO.Swagger.Model;
+
+namespace Example
+{
+    public class seatsbookedDateGetExample
+    {
+        public void main()
+        {
+            
+            var apiInstance = new BookedSeatsApi();
+            var date = date_example;  // String | Date
+
+            try
+            {
+                // shows booked seats at a particular date.
+                array[Object] result = apiInstance.seatsbookedDateGet(date);
+                Debug.WriteLine(result);
+            }
+            catch (Exception e)
+            {
+                Debug.Print("Exception when calling BookedSeatsApi.seatsbookedDateGet: " + e.Message );
+            }
+        }
+    }
+}
+</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-php">
+                              <pre class="prettyprint"><code class="language-php"><&#63;php
+require_once(__DIR__ . '/vendor/autoload.php');
+
+$api_instance = new Swagger\Client\Api\BookedSeatsApi();
+$date = date_example; // String | Date
+
+try {
+    $result = $api_instance->seatsbookedDateGet($date);
+    print_r($result);
+} catch (Exception $e) {
+    echo 'Exception when calling BookedSeatsApi->seatsbookedDateGet: ', $e->getMessage(), PHP_EOL;
+}
+?></code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-perl">
+                              <pre class="prettyprint"><code class="language-perl">use Data::Dumper;
+use WWW::SwaggerClient::Configuration;
+use WWW::SwaggerClient::BookedSeatsApi;
+
+my $api_instance = WWW::SwaggerClient::BookedSeatsApi->new();
+my $date = date_example; # String | Date
+
+eval { 
+    my $result = $api_instance->seatsbookedDateGet(date => $date);
+    print Dumper($result);
+};
+if ($@) {
+    warn "Exception when calling BookedSeatsApi->seatsbookedDateGet: $@\n";
+}</code></pre>
+                            </div>
+
+                            <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-python">
+                              <pre class="prettyprint"><code class="language-python">from __future__ import print_statement
+import time
+import swagger_client
+from swagger_client.rest import ApiException
+from pprint import pprint
+
+# create an instance of the API class
+api_instance = swagger_client.BookedSeatsApi()
+date = date_example # String | Date
+
+try: 
+    # shows booked seats at a particular date.
+    api_response = api_instance.seatsbooked_date_get(date)
+    pprint(api_response)
+except ApiException as e:
+    print("Exception when calling BookedSeatsApi->seatsbookedDateGet: %s\n" % e)</code></pre>
+                            </div>
+                          </div>
+
+                          <h2>Parameters</h2>
+
+                            <div class="methodsubtabletitle">Path parameters</div>
+                            <table id="methodsubtable">
+                                <tr>
+                                  <th width="150px">Name</th>
+                                  <th>Description</th>
+                                </tr>
+                                  <tr><td style="width:150px;">date*</td>
+<td>
+
+
+    <div id="d2e199_seatsbookedDateGet_date">
+        <div class="json-schema-view">
+            <div class="primitive">
+                <span class="type">
+                    String
+                </span>
+
+                    <div class="inner description">
+                        Date
+                    </div>
+            </div>
+                <div class="inner required">
+                    Required
+                </div>
+        </div>
+    </div>
+</td>
+</tr>
+
+                            </table>
+
+
+
+
+
+                          <h2>Responses</h2>
+                            <h3> Status: 200 - successful operation </h3>
+
+                            <ul class="nav nav-tabs nav-tabs-examples" >
+                                <li class="active">
+                                  <a data-toggle="tab" href="#responses-seatsbookedDateGet-200-schema">Schema</a>
+                                </li>
+
+                            </ul>
+
+                            <div class="tab-content" style='margin-bottom: 10px;'>
+                                <div class="tab-pane active" id="responses-seatsbookedDateGet-200-schema">
+                                  <div id='responses-seatsbookedDateGet-200-schema-200' style="padding: 30px; border-left: 1px solid #eee; border-right: 1px solid #eee; border-bottom: 1px solid #eee;">
+                                    <script>
+                                      $(document).ready(function() {
+                                        var schemaWrapper = {
+  "description" : "successful operation",
+  "schema" : {
+    "type" : "array",
+    "items" : {
+      "type" : "object",
+      "properties" : {
+        "seatId" : {
+          "type" : "integer"
+        },
+        "blocked" : {
+          "type" : "boolean"
+        },
+        "booked" : {
+          "type" : "boolean"
+        },
+        "floorNo" : {
+          "type" : "integer"
+        },
+        "buildingId" : {
+          "type" : "integer"
+        }
+      }
+    }
+  }
+};
+                                        var schema = schemaWrapper.schema;
+                                        if (schema.$ref != null) {
+                                          schema = defsParser.$refs.get(schema.$ref);
+                                        } else {
+                                          schemaWrapper.definitions = defs;
+                                          $RefParser.dereference(schemaWrapper).catch(function(err) {
+                                            console.log(err);
+                                          });
+                                        }
+
+                                        //console.log(JSON.stringify(schema));
+                                        var view = new JSONSchemaView(schema, 3);
+                                        $('#responses-seatsbookedDateGet-200-schema-data').val(stringify(schema));
+                                        var result = $('#responses-seatsbookedDateGet-200-schema-200');
+                                        result.empty();
+                                        result.append(view.render());
+                                      });
+                                    </script>
+                                  </div>
+                                  <input id='responses-seatsbookedDateGet-200-schema-data' type='hidden' value=''></input>
+                                </div>
+                            </div>
+
+                            <h3> Status: 404 - Something&#39;s wrong </h3>
 
                             <ul class="nav nav-tabs nav-tabs-examples" >
                             </ul>
