--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ margin-bottom: 20px;
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-BlockSeat-seatBlockSeatIdPut-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X PUT "https://exp1spring.herokuapp.com/desking/seat/block/{seatId}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X PUT "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/seat/block/{seatId}"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-BlockSeat-seatBlockSeatIdPut-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -1064,7 +1064,7 @@ except ApiException as e:
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-BookedSeats-seatsbookedDateGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://exp1spring.herokuapp.com/desking/seatsbooked/{date}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/seatsbooked/{date}"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-BookedSeats-seatsbookedDateGet-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -1387,7 +1387,7 @@ except ApiException as e:
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-BookingDelete-deleteBooking-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X DELETE "https://exp1spring.herokuapp.com/desking/booking/{uid}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X DELETE "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/booking/{uid}"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-BookingDelete-deleteBooking-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -1654,7 +1654,7 @@ except ApiException as e:
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-BuidlingDetailsAlongWithBookedAndBlockedSeats-buildingsIdGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://exp1spring.herokuapp.com/desking/buildings/{id}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/buildings/{id}"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-BuidlingDetailsAlongWithBookedAndBlockedSeats-buildingsIdGet-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -1980,7 +1980,7 @@ except ApiException as e:
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-BuildingParameters-buildingsGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://exp1spring.herokuapp.com/desking/buildings"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/buildings"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-BuildingParameters-buildingsGet-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -2254,7 +2254,7 @@ except ApiException as e:
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-CreateBooking-bookingCreatePost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X POST "https://exp1spring.herokuapp.com/desking/booking/create"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X POST "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/booking/create"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-CreateBooking-bookingCreatePost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -2537,7 +2537,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-DetailsOfAllBookings-bookingAlldetailsGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://exp1spring.herokuapp.com/desking/booking/alldetails"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/booking/alldetails"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-DetailsOfAllBookings-bookingAlldetailsGet-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -2826,7 +2826,7 @@ except ApiException as e:
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Recommendations-getrecommendationsUserIdDateGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://exp1spring.herokuapp.com/desking/getrecommendations/{userId}/{date}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/getrecommendations/{userId}/{date}"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-Recommendations-getrecommendationsUserIdDateGet-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -3185,7 +3185,7 @@ except ApiException as e:
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-SignIn-signinPost-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X POST "https://exp1spring.herokuapp.com/desking/signin"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X POST "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/signin"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-SignIn-signinPost-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
@@ -3526,7 +3526,7 @@ $(document).ready(function() {
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-SpecificUserBookingDetails-bookingUidGet-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://exp1spring.herokuapp.com/desking/booking/{uid}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://app1-dot-grads-coding-group-17.uc.r.appspot.com/desking/booking/{uid}"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-SpecificUserBookingDetails-bookingUidGet-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
